# not-ai

./: CImg.h  CMakeLists.txt  Makefile  main.cpp
opencv/include/opencv2/: cvconfig.h
opencv/lib/: libopencv_highgui.so.3.4.3
scripts/: build.sh  run.sh
solvers/: Result.cpp  Result.h  TestCase.cpp  base.cpp  base.h  exact.cpp  exact.h
src/: main.cpp
src/solvers/: Result.cpp  TestCase.h  base.h  exact.cpp  popup.cpp  popup.h
src/submitter/: submitter.cpp  submitter.h
src/utils/: TestReader.h
submitter/: answer.cpp  answer.h  submitter.cpp  submitter.h
tc01/: README.txt
testcase/: cut_info.json
utils/: TestReader.cpp  TestReader.h
zipit/: .gitignore  Makefile  build.sh  run.sh
