cmake_minimum_required(VERSION 3.1)
project(not_ai)
set(CMAKE_CXX_STANDARD 14)
if (NOT ${CMAKE_BUILD_TYPE} STREQUAL "Release")
    add_definitions(-DDEBUG=true)
else ()
    add_definitions(-DDEBUG=false)
endif()
find_package(OpenCV REQUIRED)
add_executable(not_ai main.cpp solvers/exact.cpp solvers/exact.h solvers/base.h solvers/base.cpp utils/TestReader.cpp utils/TestReader.h solvers/TestCase.cpp solvers/TestCase.h solvers/Result.cpp solvers/Result.h submitter/submitter.cpp submitter/submitter.h)
target_link_libraries (not_ai ${OpenCV_LIBS})
